fixed text size on mobile

--- a/style/home-2021.css
+++ b/style/home-2021.css
@@ -149,6 +149,7 @@ ul.expandable {
 .expandable li {
     padding-bottom: calc(2*var(--list-item-padding));
     color: white;
+    font-size: calc(var(--list-item-height) * 0.3);
 }
 
 
